frontend/tests/cases/negative/interfaces/kind-mismatch/kindMismatchBetweenInterfaceConstraintAndInterfaceParameter-02.gr
interface Simple (a : Type -> Type)

-- 'a' needs to have kind 'Type -> Type'
-- for 'Simple', but 'Type' for Simple2
interface {Simple a} => Simple2 (a : Type)
